# kuka_experimental

kuka_rsi_hw_interface/: CMakeLists.txt  package.xml
kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: kuka_hardware_interface.h  rsi_command.h
kuka_rsi_hw_interface/krl/KR_C4/: README.md  ros_rsi.rsix  ros_rsi.src  ros_rsi_ethernet.xml
kuka_rsi_hw_interface/krl/KR_C4/RSI3/: ros_rsi.src
kuka_rsi_hw_interface/krl/KR_C4/RSI4/: ros_rsi.src
kuka_rsi_hw_interface/src/: kuka_hardware_interface.cpp  kuka_hardware_interface_node.cpp
kuka_rsi_hw_interface/test/: test_params.yaml
kuka_rsi_messages/: CMakeLists.txt  package.xml
kuka_rsi_messages/msg/: RSIElement.msg
kuka_rsi_simulator/scripts/: kuka_rsi_simulator
